# fmc-wingpy-framework

./: .claudeignore  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/ADR/: ADR-001-index.md  ADR-002-fmc-wingpy-api-framework.md
src/fmc_wingpy/: __init__.py  cli.py  client.py  config.py  logging_setup.py  terminal.py  validation.py
